--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
   <div class="container mt-5">
     <div class="row text-white">
       <div class="col-md-4 col-12 mb-2 mb-md-0">
-        <a href="index.html"><img class="mb-3" style="width: 100px; border-radius: 5px;" src="images/Screen-Shot-2023-10-30-at-11.20.10-AM-1-e1698958515133 (1).png" alt="footer logo"></a>
+        <a href="index.html"><img class="mb-3" style="width: 100px; border-radius: 5px;" src="images/main_logo.png" alt="footer logo"></a>
 
         <p>Gold Bee Cleaning is a locally owned cleaning company in Galveston, Texas that specializes in a full range of cleaning services.</p>
        <div class="all-socail-logo mt-4">
