--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                               PROPERTIES
                             </a>
                               <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item link-menu text-dark" href="house-cleaning.html">House Cleaning</a></li>
+                                <li><a class="dropdown-item link-menu text-dark" href="luxury.html">Luxury</a></li>
                                 <li class="dd-padding"><a class="dropdown-item link-menu text-dark" href="#vacationCleaning">Vacation Cleaning</a></li>
                                 
                                 <li class="dd-padding"><a class="dropdown-item link-menu text-dark " href="#deepCleaning">Deep Cleaning</a></li>
