--- a/luxury.html
+++ b/luxury.html
@@ -129,7 +129,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="sky.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
