--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </li>
 
                         <a href="#"><button type="button"  style="width: 190px; height: 50px; background-color: #FFD563;
-                        " class="btn "><b>CALL US TODAY</b>
+                        " class="btn jakano "><b>CALL US TODAY</b>
                         </button></a>
 
                       </ul>
