--- a/gold-house.html
+++ b/gold-house.html
@@ -101,12 +101,12 @@
 
     <!-- ********Service Part-1 Start******* -->
 
-    <div class="container-fluid service-part-one-backg px-0">
-      <div class="service-part-one-backg-color d-flex">
+    <div class="container-fluid service-part-one-backg px-0 ">
+      <div class="service-part-one-backg-color d-flex border-bottom  border-2 border-warning">
         
         <div class="container text-white d-flex justify-content-center align-items-center">
           <div class="row ">
-            <div class="COL-12 d-flex justify-content-center">
+            <div class="COL-12 d-flex justify-content-center ">
               <h2 class="font-wt">PROPERTIES</h2>
             </div>
             <div class="COL-12 d-flex justify-content-center align-items-center">
@@ -131,7 +131,7 @@
 
 <div class="container-fluid bg-dark">
   <div class="container">
-    <div class="row icon border-bottom border-top border-4 border-warning ">
+    <div class="row icon border-bottom  border-4 border-warning ">
       
 
       <div class="col-3 msment-title-parts bg-dark text-white py-4">
