--- a/contact-us.html
+++ b/contact-us.html
@@ -67,8 +67,13 @@
                                 
                               </ul>
                         </li>
+
                         <li class="nav-item">
-                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="#portfolio">LANDOWNERS</a>
+                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="#businesses">BUSINESSES</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="offers.html">OFFERS</a>
                         </li>
 
                         <li class="nav-item">
@@ -88,7 +93,6 @@
           </div>
         </div>
     </nav>
-
 
     
     <!-- *************Header part End********* -->
