--- a/construction-status.html
+++ b/construction-status.html
@@ -67,8 +67,13 @@
                                 
                               </ul>
                         </li>
+
                         <li class="nav-item">
-                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="#portfolio">LANDOWNERS</a>
+                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="#businesses">BUSINESSES</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="offers.html">OFFERS</a>
                         </li>
 
                         <li class="nav-item">
@@ -88,7 +93,6 @@
           </div>
         </div>
     </nav>
-
     
     <!-- *************Header part End********* -->
 
@@ -220,7 +224,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="gold-house.html" class="text-decoration-none">
+        <a href="status-project-one.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
