--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
                                 
                               </ul>
                         </li>
+
                         <li class="nav-item">
-                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="#portfolio">LANDOWNERS</a>
+                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="#businesses">BUSINESSES</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="offers.html">OFFERS</a>
                         </li>
 
                         <li class="nav-item">
@@ -555,13 +560,13 @@
            <a href="#aboutUs">About Us</a>
           </li>
           <li>
-            <a href="house-cleaning.html">Services</a>
+            <a href="house-cleaning.html">Businesses</a>
            </li>
            <li>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#portfolio">Offers</a>
            </li>
            <li>
-            <a href="#testimonials">Testimonials</a>
+            <a href="#testimonials">Constraction Status</a>
            </li>
            <li>
             <a href="contact-us.html">Contact Us</a>
