--- a/construction-status.html
+++ b/construction-status.html
@@ -177,7 +177,7 @@
 
 <!-- ***********Collection Part Start************ -->
 
-<div class="container-fluid bg-secondary mt-1 border-bottom  border-3 border-warning">
+<div class="container-fluid bg-secondary mt-1 border-bottom  border-3 border-warning" id="luxuryCollection">
   <div class="container">
     <div class="row icon border-top  border-2 border-warning ">
       
@@ -193,7 +193,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav fs-6">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Luxury Collection</a>
+                  <a class="nav-link active" aria-current="page" href="#luxuryCollection">Luxury Collection</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Classic Collection</a>
@@ -217,20 +217,20 @@
 </div>
 <!-- ***********Collection Part End************ -->
     
- <!-- ***********Luxury project card Start************ -->
+ <!-- ***********Luxury collection card Start************ -->
 
-<div class="container">
+<div class="container" >
   <div class="row row-cols-1 row-cols-md-3 g-4 py-4">
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="status-project-one.html" class="text-decoration-none">
+        <a href="luxury-collection-one.html" class="text-decoration-none">
         <div class="properties-img">
-        <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
+        <img src="images2/960be4d60b1d17b79f9aceeeba7db4ce.jpg" class="card-img-top"  alt="...">
         </div>
         <div class="card-body text-dark">
-          <h5 class="card-title d-flex justify-content-center font-wt">Gold House</h5>
-          <p class="card-text d-flex justify-content-center">Dhanmondi, Dhaka</p>
+          <h5 class="card-title d-flex justify-content-center font-wt">Opera House</h5>
+          <p class="card-text d-flex justify-content-center">Gulshan, Dhaka</p>
         </div>
         </a>
       </div>
@@ -343,7 +343,7 @@
   </div>
 </div>
 
-<!-- ***********Luxury project card Start************ -->
+<!-- ***********Luxury collection card Start************ -->
 
  <!-- ****Swiper Slider recent work photo Start***-->
 
