--- a/luxury-collection-eight.html
+++ b/luxury-collection-eight.html
@@ -267,55 +267,54 @@
             </tr>
 
             <tr class="text-white">
-            <th scope="row">01</th>
-            <td>Switch -Socket fitting work</td>
-            <td>&nbsp;</td>
+            <th scope="row">16</th>
+            <td>Switch-Socket fitting work</td>
+            <td></td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
+            <th scope="row">17</th>
             <td>Outside paint work</td>
             <td>&nbsp;</td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
+            <th scope="row">18</th>
             <td>Door shutter work</td>
             <td>&nbsp;</td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
+            <th scope="row">19</th>
             <td>Aluminum/Glazing work</td>
-            <td>&nbsp;</td>
+            <td></td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
-            <td>Tiles Pointing work &amp; Marble finishing work</td>
-            <td>&nbsp;</td>
+            <th scope="row">20</th>
+            <td>Tiles Pointing work & Marble finishing work</td>
+            <td></td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
-            <td>Commode – Basin fitting work and C.P fittings work</td>
-            <td>&nbsp;<p></p>
-            <p>&nbsp;</p></td>
+            <th scope="row">21</th>
+            <td>Commode-Basin fitting work and C.P fittings work</td>
+            <td></td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
+            <th scope="row">22</th>
             <td>Lift/Generator /Substation /Solar work</td>
-            <td>&nbsp;</td>
+            <td></td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
+            <th scope="row">23</th>
             <td>Boundary wall /Ground floor development work</td>
-            <td>&nbsp;</td>
+            <td></td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
+            <th scope="row">24</th>
             <td>Roof top finishing work</td>
-            <td>&nbsp;</td>
+            <td></td>
             </tr>
             <tr class="text-white">
-            <th scope="row">01</th>
+            <th scope="row">25</th>
             <td>Roof top Gardening work</td>
-            <td>&nbsp;</td>
+            <td></td>
             </tr>
           
         </table>
