--- a/luxury.html
+++ b/luxury.html
@@ -195,7 +195,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="gold-house.html" class="text-decoration-none">
+        <a href="luxury-house-one.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
@@ -209,7 +209,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="luxury-house-two.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
@@ -224,7 +224,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="luxury-house-three.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
@@ -239,7 +239,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="luxury-house-four.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
@@ -254,7 +254,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="luxury-house-five.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
@@ -269,7 +269,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="luxury-house-six.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
@@ -284,7 +284,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="luxury-house-seven.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
@@ -299,7 +299,7 @@
     <div class="col-md-3 col-12">
 
       <div class="card properties-card ">
-        <a href="#" class="text-decoration-none">
+        <a href="luxury-house-eight.html" class="text-decoration-none">
         <div class="properties-img">
         <img src="images2/763315ca0e855db2ba421b1a5abd2ecf.jpg" class="card-img-top"  alt="...">
         </div>
