--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 
   <title>Landview Group</title>
+  <link rel="icon" type="image/x-icon" href="/images2/favicon.ico">
 
 
 </head>
@@ -33,7 +34,7 @@
   <!-- *************Header part Start********* -->
 
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm border-bottom border-2 border-warning sticky-top">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white shadow-sm border-bottom border-2 border-warning">
 
     <div class="container-fluid ">
       <div class="container">
@@ -162,7 +163,7 @@
       <div class="row icon border-bottom border-4 border-warning ">
 
 
-        <div class="col-3 icon-parts bg-dark text-white py-4">
+        <div class="col-3 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -172,7 +173,7 @@
           </div>
         </div>
 
-        <div class="col-3 icon-parts bg-dark text-white py-4">
+        <div class="col-3 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -182,7 +183,7 @@
           </div>
         </div>
 
-        <div class="col-3 icon-parts bg-dark text-white py-4">
+        <div class="col-3 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -192,7 +193,7 @@
           </div>
         </div>
 
-        <div class="col-3 icon-parts bg-dark text-white py-4">
+        <div class="col-3 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-check-square-fill"></i>
           </div>
@@ -474,8 +475,7 @@
       <div class="container ">
         <div class="row pb-5 ">
 
-          <div class=" mb-5 mt-5 text-white">
-            <p class="font-wt">OUR PORTFOLIO</p>
+          <div class="mt-5 text-white">
             <h2 class="font-wt">Recent Work Showcase</h2>
           </div>
 
@@ -523,7 +523,7 @@
 
   <!-- **********Footer Part Start*********** -->
 
-  <div class="container-fluid pt-5 " style="background-color: #0D1D35;">
+  <div class="container-fluid pt-2 " style="background-color: #0D1D35;">
     <div class="container mt-5">
       <div class="row text-white">
         <div class="col-md-4 col-12 mb-2 mb-md-0">
@@ -550,7 +550,7 @@
         </div>
         <div class="col-md-2 col-12 quick-link">
           <h5>Quick Links</h5>
-          <ul class="ps-0 mt-4">
+          <ul class="footer-border-right ps-0 mt-4">
             <li>
               <a href="about-us.html">About Us</a>
             </li>
@@ -662,11 +662,11 @@
       </div>
     </div>
 
-    <div class="container border-top border-secondary mt-5 py-2">
+    <div class="container border-top border-secondary mt-5">
       <div class="row text-white">
         <div class="col-12 d-flex justify-content-center align-items-center ">
           <hr>
-          <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved.</p>
+          <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
         </div>
       </div>
     </div>
