home page update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="container-fluid ">
       <div class="container">
-        <div class="row pl-0">
+        <div class="row">
 
 
           <div class="col-md-2 col-6 px-0">
@@ -132,8 +132,8 @@
 
   <div class="container-fluid background-pic py-5 ">
 
-    <div class="container">
-      <div class="row ">
+    <div class="container pt-5">
+      <div class="row mt-5 ">
         <div class="col-md-6 col-12 p-5 border rounded" style="background-color: #FFFFFFAB;">
 
           <p class="font-wt">WELCOME TO LANDVIEW GROUP</p>
@@ -375,8 +375,8 @@
           <div class="col-8">
 
             <div class="row">
-              <p class="font">WHY CHOOSE US</p>
-              <h2 class="mb-5"><b>Why Would You Choose Landview Group?</b></h2>
+              <p class="font font-wt text-warning">WHY CHOOSE US</p>
+              <h2 class="mb-5 font-wt text-success"><b>Why Would You Choose Landview Group?</b></h2>
               <div class="col-6 d-flex mb-3">
 
 
@@ -576,7 +576,7 @@
               <a href="#"><i class="bi bi-map"></i></a>
             </div>
             <div class="contact-address">
-              <p>Plot - 11/B (Navana Bilkis), Road -36, Gulshan 2, Dhaka-1212 </p>
+              <p>Plot-11/B (Navana Bilkis), Road -36, Gulshan 2, Dhaka-1212 </p>
             </div>
           </div>
 
