--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- *************Header part Start********* -->
 
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white shadow-sm border-bottom border-2 border-warning">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white shadow-sm border-bottom border-2 border-warning nav-backg-img bg-transparent">
 
     <div class="container-fluid ">
       <div class="container">
@@ -57,7 +57,7 @@
             <div class="collapse navbar-collapse" style="margin-left:0px;" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link link-menu text-dark mx-1" aria-current="page" href="index.html">HOME</a>
+                  <a class="nav-link link-menu text-danger mx-1 font-wt" aria-current="page" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link link-menu text-dark mx-1" href="about-us.html">ABOUT US</a>
