business pages update

--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
 
 
   <title>Landview Group</title>
-  <link rel="icon" type="image/x-icon" href="/images2/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images2/favicon.ico">
 
 
 </head>
