--- a/index.html
+++ b/index.html
@@ -699,6 +699,8 @@
 
 
   <script src="Swiper-slider-recent-work.js"></script>
+
+  <!-- popovers-js for call button -->
  
   <script>
     var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
