--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- External Css  -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/responsive-css.css">
 
 
   <title>Landview Group</title>
@@ -626,7 +627,7 @@
           </div>
 
         </div>
-        <div class="col-md-2 col-12 quick-link">
+        <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
           <h5>Quick Links</h5>
           <ul class="footer-border-right ps-0 mt-4">
             <li>
