--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <!-- External Css  -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive-css.css">
 
 
@@ -38,7 +38,7 @@
     <div class="container-fluid">
       <a class="navbar-brand me-auto" href="index.html"><img class="img-fluid" src="images/main_logo.png" alt="Main Logo"></a>
 
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas offcanvas-end bg-light bg-opacity-75" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -58,7 +58,7 @@
                 aria-expanded="false">
                 PROPERTIES
               </a>
-              <ul class="dropdown-menu ">
+              <ul class="dropdown-menu bg-light bg-opacity-75 ps-3">
                 <li><a class="nav-link dropdown-item" href="luxury.html">Luxury</a></li>
                 <li><a class="nav-link dropdown-item" href="classic.html">Classic</a></li>
 
@@ -74,7 +74,7 @@
                 aria-expanded="false">
                 BUSINESSES
               </a>
-              <ul class="dropdown-menu ">
+              <ul class="dropdown-menu bg-light bg-opacity-75 ps-3">
                 <li><a class="nav-link dropdown-item" href="landview-devel-design.html">Landview
                     Development & Design Ltd.</a></li>
                 <li><a class="nav-link dropdown-item" href="landview-builders.html">Landview Builders Ltd.</a></li>
@@ -103,7 +103,7 @@
 
         </div>
       </div>
-      <a class="login-button jakano"  href="#"><i class="bi bi-telephone"></i> Call</a>
+      <a class="login-button jakano"  data-bs-toggle="popover"  data-bs-content="01914449393"  href="tel:01914449393"><i class="bi bi-telephone"></i> Call</a>
       <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
