--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- *************Header part Start********* -->
 
   <!-- Navbar Start -->
-  <nav class="navbar navbar-expand-lg fixed-top border-bottom border-2 border-danger shadow-sm">
+  <nav class="navbar navbar-expand-lg fixed-top border-bottom border-2 border-danger shadow-sm bg-white">
     <div class="container-fluid">
       <a class="navbar-brand me-auto" href="index.html"><img class="img-fluid" src="images/main_logo.png" alt="Main Logo"></a>
 
