contuct us update

--- a/contact-us.html
+++ b/contact-us.html
@@ -117,8 +117,8 @@
 
     <!-- ********Contact Us Part-1 Start******* -->
 
-    <div class="container-fluid contact-us-part-one-backg px-0">
-      <div class="contact-us-part-one-backg-color d-flex">
+    <div class="container-fluid contact-us-part-one-backg px-0 margin-contruct-top">
+      <div class="contact-us-part-one-backg-color d-flex border-bottom border-3 border-success">
         
         <div class="container text-white d-flex justify-content-center align-items-center">
           <div class="row ">
