owl carousel-2 update

--- a/about-us.html
+++ b/about-us.html
@@ -122,11 +122,11 @@
 
   <!-- *************Header part End********* -->
 
-  <!-- ***********Welcome Part Start************ -->
-  <div class="container-fluid margin-about-top bg-dark">
+  <!-- ***********Owl carousel slider-2 Start************ -->
+  <div class="container-fluid margin-about-top bg-dark ">
     <div class="container ">
-      <div class="row">
-        <div class="col-12">
+      <div class="row ">
+        <div class="col-12 border-bottom border-3 border-warning">
           
           <div class="slider">
             <div class="owl-carousel">
@@ -169,7 +169,7 @@
   </div>
 
 
-  <!-- ***********Welcome Part End************ -->
+  <!-- ***********Owl carousel slider-2 End************ -->
 
 
 
@@ -665,8 +665,6 @@
       return new bootstrap.Popover(popoverTriggerEl)
     })
   </script>
-
-
 
 
 </body>
