collection pages link

--- a/luxury-collection-seven.html
+++ b/luxury-collection-seven.html
@@ -116,8 +116,7 @@
   <!-- *************Header part End********* -->
 
 
-  
-     <!-- ***********Mesurement Part  Start************ -->
+    <!-- ***********Mesurement Part  Start************ -->
 
 <div class="container-fluid bg-dark margin-contruct-top">
   <div class="container">
@@ -126,7 +125,7 @@
 
       <div class="col-md-4 col-12 msment-title-parts bg-dark text-white py-3">
         <div class="msment-title-top mb-2" >
-          <h3>Beverly Residence</h3>
+          <h3>Opera House</h3>
           
         </div>
         <div class="msment-title-btom ">
