--- a/luxury-collection-four.html
+++ b/luxury-collection-four.html
@@ -115,6 +115,7 @@
 
   <!-- *************Header part End********* -->
 
+
   
      <!-- ***********Mesurement Part  Start************ -->
 
@@ -125,7 +126,7 @@
 
       <div class="col-md-4 col-12 msment-title-parts bg-dark text-white py-3">
         <div class="msment-title-top mb-2" >
-          <h3>Beverly Residence</h3>
+          <h3>Opera House</h3>
           
         </div>
         <div class="msment-title-btom ">
