responsive update of offers page

--- a/construction-status.html
+++ b/construction-status.html
@@ -125,9 +125,9 @@
     
 
       <div class="col-12 py-3">
-        <nav class="navbar navbar-light ">
+        <nav class="navbar navbar-light margin-mobile-bottom ">
           <div class="container-fluid">
-            <a class="navbar-brand font-wt text-white margin-mobile-bottom"><i class="bi bi-building-check"></i> CONSTRUCTION STATUS</a>
+            <a class="navbar-brand font-wt text-white "><i class="bi bi-building-check"></i> CONSTRUCTION STATUS</a>
             
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
