owl carousel responsive update

--- a/commercial.html
+++ b/commercial.html
@@ -180,9 +180,10 @@
       <div class="col-12">
         <nav class="navbar navbar-light ">
           <div class="container-fluid">
+            <div class="col-md-4 col-12">
             <a class="navbar-brand font-wt text-white"><i class="bi bi-house-heart-fill"></i> FIND A PROPERTY</a>
-            
-            <div class="dropdown">
+          </div>
+            <div class="col-md-4 col-4 dropdown">
               <button class="btn btn-outline-success dropdown-toggle " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 Select a Location
               </button>
@@ -192,11 +193,12 @@
                 <li><a class="dropdown-item" href="#">Uttara</a></li>
               </ul>
             </div>
-
+            <div class="col-md-4 col-6">
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+          </div>
           </div>
         </nav>
       </div>
