responsive update of home page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="row icon border-bottom border-4 border-warning ">
 
 
-        <div class="col-3 icon-parts bg-dark text-white py-2">
+        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -161,7 +161,7 @@
           </div>
         </div>
 
-        <div class="col-3 icon-parts bg-dark text-white py-2">
+        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -171,7 +171,7 @@
           </div>
         </div>
 
-        <div class="col-3 icon-parts bg-dark text-white py-2">
+        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -181,7 +181,7 @@
           </div>
         </div>
 
-        <div class="col-3 icon-parts bg-dark text-white py-2">
+        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-check-square-fill"></i>
           </div>
@@ -206,7 +206,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-4">
+          <div class="col-md-4 col-12">
             <div class="relative-about shadow">
 
               <div class="absolute-about p-4">
@@ -215,7 +215,7 @@
             </div>
           </div>
 
-          <div class="col-8 py-4 ps-5">
+          <div class="col-md-8 col-12 py-4 ps-5">
             <p><b>ABOUT US</b></p>
             <h2><b>We Are Service Provider</b></h2>
             <p>Landview Group is a real estate firm with high standards known for its professionalism in the industry
@@ -248,12 +248,12 @@
 
           <div class="col-12 our-ser-top-title d-flex justify-content-between mb-4">
 
-            <div class="service-title">
+            <div class="col-md-6 col-12 service-title">
               <p class="text-white font-wt">LANDVIEW GROUP</p>
               <h2 class="text-white font-wt">Our Businesses</h2>
             </div>
 
-            <div class="learn-more-ser-btn">
+            <div class="col-md-6 col-12 learn-more-ser-btn d-flex justify-content-end">
 
               <a href="#"><button type="button" style="width: 240px; height: 50px; background-color: #FFD563;"
                   class="btn "><b>LEARN MORE BUSINESS</b>
@@ -262,14 +262,14 @@
 
           </div>
 
-          <div class="col-6">
+          <div class="col-md-6 col-12 mb-3">
             <div class="bg-white mb-3  shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-development-and-design.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Development & Design Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quo earum
                       temporibus quibusdam excepturi doloribus?</p>
@@ -282,14 +282,14 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-md-6 col-12 mb-3">
             <div class="bg-white  shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-builders.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Builders Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere laborum fugiat
                       culpa consequatur nisi aut consequatur nisi consequatur nisi?
@@ -304,14 +304,14 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-md-6 col-12 mb-3">
             <div class="bg-white  shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-properties.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Properties Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad ea, nihil
                       perspiciatis consequuntur omnis officiis.</p>
@@ -324,14 +324,14 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-md-6 col-12 mb-3">
             <div class="bg-white shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-engineering-and-constructions-ltd.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Engineering & Constructions Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, labore?</p>
                     <a class="text-decoration-none" href="#">
