--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg fixed-top border-bottom border-2 border-danger shadow-sm bg-white">
     <div class="container-fluid">
-      <a class="navbar-brand me-auto" href="index.html"><img class="img-fluid" src="images/main_logo.png" alt="Main Logo"></a>
+      <a class="navbar-brand me-auto" href="index.html"><img class="img-fluid" src="images/main_logo.png"
+          alt="Main Logo"></a>
 
-      <div class="offcanvas offcanvas-end bg-light bg-opacity-75" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas offcanvas-end bg-light bg-opacity-75" tabindex="-1" id="offcanvasNavbar"
+        aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -51,7 +53,7 @@
             <li class="nav-item">
               <a class="nav-link mx-lg-2" href="about-us.html">ABOUT US</a>
             </li>
-            
+
             <li class="nav-item dropdown">
 
               <a class="nav-link mx-lg-2 dropdown-toggle" href="properties.html" role="button" data-bs-toggle="dropdown"
@@ -103,7 +105,8 @@
 
         </div>
       </div>
-      <a class="login-button jakano"  data-bs-toggle="popover"  data-bs-content="01914449393"  href="tel:01914449393"><i class="bi bi-telephone"></i> Call</a>
+      <a class="login-button jakano" data-bs-toggle="popover" data-bs-content="01914449393" href="tel:01914449393"><i
+          class="bi bi-telephone"></i> Call</a>
       <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -206,7 +209,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-md-4 col-12">
+          <div class="col-md-4 col-12 d-flex justify-content-center">
             <div class="relative-about shadow">
 
               <div class="absolute-about p-4">
@@ -246,14 +249,14 @@
       <div class="container ">
         <div class="row py-5 ">
 
-          <div class="col-12 our-ser-top-title d-flex justify-content-between mb-4">
+          <div class="col-12 our-ser-top-title d-md-flex justify-content-md-between mb-4">
 
             <div class="col-md-6 col-12 service-title">
               <p class="text-white font-wt">LANDVIEW GROUP</p>
               <h2 class="text-white font-wt">Our Businesses</h2>
             </div>
 
-            <div class="col-md-6 col-12 learn-more-ser-btn d-flex justify-content-end">
+            <div class="col-md-6 col-12 learn-more-ser-btn d-md-flex justify-content-end">
 
               <a href="#"><button type="button" style="width: 240px; height: 50px; background-color: #FFD563;"
                   class="btn "><b>LEARN MORE BUSINESS</b>
@@ -263,7 +266,7 @@
           </div>
 
           <div class="col-md-6 col-12 mb-3">
-            <div class="bg-white mb-3  shadow-sm rounded">
+            <div class="bg-white shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-development-and-design.jpg" class="img-fluid " alt="...">
@@ -360,14 +363,13 @@
     <div class="w-ch-backg-color">
       <div class="container py-5 ">
         <div class="row p-3">
-          <div class="col-8">
+          <div class="col-md-8 col-12">
 
             <div class="row">
               <p class="font font-wt text-warning">WHY CHOOSE US</p>
               <h2 class="mb-5 font-wt text-success"><b>Why Would You Choose Landview Group?</b></h2>
-              <div class="col-6 d-flex mb-3">
 
-
+              <div class="col-md-6 col-12 d-flex mb-3">
                 <div class="W-Ch-Icon">
                   <i class="bi bi-view-stacked icon-design"></i>
                 </div>
@@ -385,7 +387,7 @@
 
 
 
-              <div class="col-6 d-flex">
+              <div class="col-md-6 col-12 d-flex mb-5">
 
 
                 <div class="W-Ch-Icon">
@@ -403,7 +405,7 @@
 
               </div>
 
-              <div class="col-6 d-flex">
+              <div class="col-md-6 col-12 d-flex mb-5">
 
 
                 <div class="W-Ch-Icon">
@@ -422,7 +424,7 @@
               </div>
 
 
-              <div class="col-6 d-flex mb-3">
+              <div class="col-md-6 col-12 d-flex mb-5">
 
 
                 <div class="W-Ch-Icon">
@@ -440,7 +442,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4 d-flex align-items-center">
+          <div class="col-md-4 col-12 d-flex align-items-center">
             <div class="relative shadow">
 
               <div class="absolute p-4">
