home page update

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -123,13 +123,13 @@
 
   <div class="container-fluid background-pic py-5 ">
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-10 p-md-5 p-2 border rounded" style="background-color: #FFFFFFAB;">
+    <div class="container pt-5">
+      <div class="row mt-5 ">
+        <div class="col-md-6 col-12 p-5 border rounded" style="background-color: #FFFFFFAB;">
 
           <p class="font-wt">WELCOME TO LANDVIEW GROUP</p>
 
-          <h3 class="font-wt home-wellcome-font-size-title">Landview Group-Your Reliable Real Estate Partner!</h3>
+          <h3 class="font-wt">Landview Group-Your Reliable Real Estate Partner!</h3>
 
           <p>As a premier property developer, we offer a diverse range of apartments to suit every lifestyle and budget.
           </p>
@@ -154,7 +154,7 @@
       <div class="row icon border-bottom border-4 border-warning ">
 
 
-        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2 ">
+        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -204,41 +204,39 @@
 
   <!-- ***********About Us Start************ -->
 
-  <div class="container-fluid  px-0" id="aboutUs">
+  <div class="container-fluid about-us-Backg px-0" id="aboutUs">
+    <div class="about-us-bg-color">
+      <div class="container">
+        <div class="row">
 
-    <div class="container about-us-Backg ">
-      <div class="row about-us-bg-color">
+          <div class="col-md-4 col-12 d-flex justify-content-center">
+            <div class="relative-about shadow">
 
-        <div class="col-md-4 col-12 d-flex justify-content-center">
-          <div class="relative-about shadow">
-
-            <div class="absolute-about p-4">
-              <img class="img-fluid" src="images2/industry-lanes-building-architectus_1.jpg" alt="">
+              <div class="absolute-about p-4">
+                <img class="img-fluid" src="images2/industry-lanes-building-architectus_1.jpg" alt="">
+              </div>
             </div>
           </div>
+
+          <div class="col-md-8 col-12 py-4 ps-5">
+            <p><b>ABOUT US</b></p>
+            <h2><b>We Are Service Provider</b></h2>
+            <p>Landview Group is a real estate firm with high standards known for its professionalism in the industry
+              and as one of the pioneers of the real estate sector of Bangladesh. Our dedication and years of experience
+              with an ongoing pursuit of excellence have earned us an advantageous position in the sector. We are truly
+              humbled by the trust and love of our customers, which has steadily grown in the last two decades.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dignissimos quia quam hic
+              recusandae nam, voluptate sint ullam sit veniam doloremque possimus, repellat eaque? Nobis atque,
+              assumenda, iste dolorem neque obcaecati illo sint officiis id architecto, aliquam incidunt. Sit repellat
+              dignissimos eum quos perferendis eaque. Porro excepturi soluta ab voluptatum?Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Ab saepe enim placeat earum facilis nisi. Quasi, nemo sed tenetur iste,
+              repellendus culpa mollitia earum voluptatem architecto, molestias modi? Dolor, maxime?</p>
+
+
+          </div>
         </div>
-
-        <div class="col-md-8 col-12 py-4 ps-5">
-
-          <p><b>ABOUT US</b></p>
-          <h2><b>We Are Service Provider</b></h2>
-          <p>Landview Group is a real estate firm with high standards known for its professionalism in the industry
-            and as one of the pioneers of the real estate sector of Bangladesh. Our dedication and years of experience
-            with an ongoing pursuit of excellence have earned us an advantageous position in the sector. We are truly
-            humbled by the trust and love of our customers, which has steadily grown in the last two decades.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dignissimos quia quam hic
-            recusandae nam, voluptate sint ullam sit veniam doloremque possimus, repellat eaque? Nobis atque,
-            assumenda, iste dolorem neque obcaecati illo sint officiis id architecto, aliquam incidunt. Sit repellat
-            dignissimos eum quos perferendis eaque. Porro excepturi soluta ab voluptatum?Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Ab saepe enim placeat earum facilis nisi. Quasi, nemo sed tenetur iste,
-            repellendus culpa mollitia earum voluptatem architecto, molestias modi? Dolor, maxime?</p>
-
-
-        </div>
-
       </div>
     </div>
-
   </div>
 
   <!-- ***********About Us End************ -->
